/* Copyright 2023 The TensorFlow Authors. All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
==============================================================================*/

syntax = "proto3";

package xla.ifrt;

// Wire format for `DeviceList`.
message DeviceListProto {
  // Serialization and deserialization are expected to ensure that device ids
  // are stable across proto construction and consumption.
  repeated int32 device_ids = 1;
}

// Wire format for `Shape`. Currently support static shapes with all dimension
// sizes greater than or equal to 0.
message ShapeProto {
  repeated int64 dims = 1;
}
